gen/pp/homework/q1_4/TreeParser.java
// Generated from C:/Users/Janko/IdeaProjects/Compiler_construction/src/pp/homework/q1_4\Tree.g4 by ANTLR 4.7
package pp.homework.q1_4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TreeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAR=1, RPAR=2, LEFT=3, RIGHT=4, NUM=5, WS=6;
	public static final int
		RULE_top = 0, RULE_node = 1;
	public static final String[] ruleNames = {
		"top", "node"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'<'", "'>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "LPAR", "RPAR", "LEFT", "RIGHT", "NUM", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tree.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TreeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TopContext extends ParserRuleContext {
		public NodeContext node() {
			return getRuleContext(NodeContext.class,0);
		}
		public TopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TreeListener ) ((TreeListener)listener).enterTop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TreeListener ) ((TreeListener)listener).exitTop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TreeVisitor ) return ((TreeVisitor<? extends T>)visitor).visitTop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopContext top() throws RecognitionException {
		TopContext _localctx = new TopContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_top);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(4);
			node();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeContext extends ParserRuleContext {
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
	 
		public NodeContext() { }
		public void copyFrom(NodeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NumNodeContext extends NodeContext {
		public TerminalNode NUM() { return getToken(TreeParser.NUM, 0); }
		public NumNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TreeListener ) ((TreeListener)listener).enterNumNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TreeListener ) ((TreeListener)listener).exitNumNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TreeVisitor ) return ((TreeVisitor<? extends T>)visitor).visitNumNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LeftNodeContext extends NodeContext {
		public TerminalNode LPAR() { return getToken(TreeParser.LPAR, 0); }
		public NodeContext node() {
			return getRuleContext(NodeContext.class,0);
		}
		public TerminalNode LEFT() { return getToken(TreeParser.LEFT, 0); }
		public TerminalNode NUM() { return getToken(TreeParser.NUM, 0); }
		public TerminalNode RPAR() { return getToken(TreeParser.RPAR, 0); }
		public LeftNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TreeListener ) ((TreeListener)listener).enterLeftNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TreeListener ) ((TreeListener)listener).exitLeftNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TreeVisitor ) return ((TreeVisitor<? extends T>)visitor).visitLeftNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RightNodeContext extends NodeContext {
		public TerminalNode LPAR() { return getToken(TreeParser.LPAR, 0); }
		public TerminalNode NUM() { return getToken(TreeParser.NUM, 0); }
		public TerminalNode RIGHT() { return getToken(TreeParser.RIGHT, 0); }
		public NodeContext node() {
			return getRuleContext(NodeContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(TreeParser.RPAR, 0); }
		public RightNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TreeListener ) ((TreeListener)listener).enterRightNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TreeListener ) ((TreeListener)listener).exitRightNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TreeVisitor ) return ((TreeVisitor<? extends T>)visitor).visitRightNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinNodeContext extends NodeContext {
		public TerminalNode LPAR() { return getToken(TreeParser.LPAR, 0); }
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public TerminalNode LEFT() { return getToken(TreeParser.LEFT, 0); }
		public TerminalNode NUM() { return getToken(TreeParser.NUM, 0); }
		public TerminalNode RIGHT() { return getToken(TreeParser.RIGHT, 0); }
		public TerminalNode RPAR() { return getToken(TreeParser.RPAR, 0); }
		public BinNodeContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TreeListener ) ((TreeListener)listener).enterBinNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TreeListener ) ((TreeListener)listener).exitBinNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TreeVisitor ) return ((TreeVisitor<? extends T>)visitor).visitBinNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_node);
		try {
			setState(27);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new NumNodeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(6);
				match(NUM);
				}
				break;
			case 2:
				_localctx = new LeftNodeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(7);
				match(LPAR);
				setState(8);
				node();
				setState(9);
				match(LEFT);
				setState(10);
				match(NUM);
				setState(11);
				match(RPAR);
				}
				break;
			case 3:
				_localctx = new RightNodeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(13);
				match(LPAR);
				setState(14);
				match(NUM);
				setState(15);
				match(RIGHT);
				setState(16);
				node();
				setState(17);
				match(RPAR);
				}
				break;
			case 4:
				_localctx = new BinNodeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(19);
				match(LPAR);
				setState(20);
				node();
				setState(21);
				match(LEFT);
				setState(22);
				match(NUM);
				setState(23);
				match(RIGHT);
				setState(24);
				node();
				setState(25);
				match(RPAR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}